# belle

./: .Dockerfile  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  build.ps1  build.sh  install.ps1  install.sh  test.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml  spellcheck.yml  windows-build.yml
basm/: Cargo.toml
basm/src/: codegen.rs  config.rs  encode.rs  error_generation.rs  help_generation.rs  io.rs  lexer.rs  lib.rs  main.rs  misc.rs  symbol_table.rs  tokens.rs  verify.rs
bdump/: .clang-format  Makefile  README.md  bdump.c  bdump.h  build.bat  cli.c  colors.c  colors.h  consts.h  instruction_print.c  io.c  macros.h  print_helpers.c  prototypes.h  structures.c  structures.h
belle/: Cargo.toml
belle/fuzz/fuzz_targets/: fuzz_target_1.rs
belle/src/: config.rs  crashdump.rs  debugger.rs  lib.rs  main.rs  misc.rs  test.rs
belle/src/consts_enums/: arg_types.rs  cpu_errors.rs  emu_errors.rs
belle/src/debugger/: bdb_core.rs  bdb_utils.rs  mod.rs
belle/src/hardware/: core.rs  decoder.rs  error_generation.rs  mod.rs  printing.rs  state_recording.rs
belle/src/hardware/cpu/: core.rs  err_report.rs  error_generation.rs  instruction_handling.rs  load_execute.rs  mod.rs  printing.rs
belle/src/hardware/instruction_handling/: interrupt.rs  jump.rs  load_store.rs  mod.rs  mov_and_math.rs  push_pop.rs  ret_cmp.rs
belle/src/hardware/memory/: mod.rs  rom_loading.rs
btils/: .bfmt.rs  Makefile  bfmt.c  bfmt.py  bfmt_utils.c  build.bat
examples/: Makefile  bench.asm  bin_ops.asm  binstall.ps1  binstall.sh  count.asm  defaults.asm  double-int.asm  fib.asm  game.asm  hello.asm  spiral.asm  test.asm  waste_time.asm
site/: astro.config.mjs  package-lock.json  package.json
(+57 files in other folders)
