[package]
name = "belle"
version = "0.2.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
crossterm = "0.28.1"
ahash = "0.8.11"
clap = { version = "4.5.27", features = ["derive"] }
once_cell = "1.20.2"
colored = "3.0.0"
rusttype = { version = "0.9.3", optional = true }

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["bundled"]
optional = true
[features]
window = [ "rusttype", "sdl2" ]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }

[profile.release]
debug = 0
opt-level = 3
codegen-units = 1
strip = true
