[package]
name = "belle"
version = "0.2.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
crossterm = "0.28.1"
clap = { version = "4.5.32", features = ["derive"] }
once_cell = "1.20.3"
colored = "3.0.0"
minifb = { version = "0.28.0", optional = true }
fontdue = { version = "0.9.3", optional = true }

[features]
window = [ "minifb", "fontdue" ]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }

[profile.release]
lto = true
debug = 0
opt-level = 3
codegen-units = 1
strip = true
